# api/models/author.go
@@ -1,45 +1,45 @@
  package models
 
-// type Author struct {
-// 	ID        string `json:"id"`
-// 	Name      string `json:"name"`
-// 	Login     string `json:"login"`
-// 	Password  string `json:"password"`
-// 	Phone     string `json:"phone"`
-// 	Gender    string `json:"gender"`
-// 	BirthDate string `json:"birth_date"`
-// 	Age       int    `json:"age"`
-// 	Address   string `json:"address"`
-// 	CreatedAt string `json:"created_at"`
-// 	UpdatedAt string `json:"updated_at"`
-// 	DeletedAt int    `json:"deleted_at"`
-// }
+type Author struct {
+	ID        string `json:"id"`
+	Name      string `json:"name"`
+	Login     string `json:"login"`
+	Password  string `json:"password"`
+	Phone     string `json:"phone"`
+	Gender    string `json:"gender"`
+	BirthDate string `json:"birth_date"`
+	Age       int    `json:"age"`
+	Address   string `json:"address"`
+	CreatedAt string `json:"created_at"`
+	UpdatedAt string `json:"updated_at"`
+	DeletedAt int    `json:"deleted_at"`
+}
 
-// type CreateAuthor struct {
-// 	Name      string `json:"name"`
-// 	Login     string `json:"login"`
-// 	Password  string `json:"password"`
-// 	Phone     string `json:"phone"`
-// 	Gender    string `json:"gender"`
-// 	BirthDate string `json:"birth_date"`
-// 	Address   string `json:"address"`
-// }
+type CreateAuthor struct {
+	Name      string `json:"name"`
+	Login     string `json:"login"`
+	Password  string `json:"password"`
+	Phone     string `json:"phone"`
+	Gender    string `json:"gender"`
+	BirthDate string `json:"birth_date"`
+	Address   string `json:"address"`
+}
 
-// type UpdateAuthor struct {
-// 	ID      string `json:"id"`
-// 	Name    string `json:"name"`
-// 	Login   string `json:"login"`
-// 	Phone   string `json:"phone"`
-// 	Address string `json:"address"`
-// }
+type UpdateAuthor struct {
+	ID      string `json:"id"`
+	Name    string `json:"name"`
+	Login   string `json:"login"`
+	Phone   string `json:"phone"`
+	Address string `json:"address"`
+}
 
-// type UpdateAuthorPassword struct {
-// 	ID          string `json:"id"`
-// 	NewPassword string `json:"new_password"`
-// 	OldPassword string `json:"old_password"`
-// }
+type UpdateAuthorPassword struct {
+	ID          string `json:"id"`
+	NewPassword string `json:"new_password"`
+	OldPassword string `json:"old_password"`
+}
 
-// type AuthorsResponse struct {
-// 	Authors []Author `json:"authors"`
-// 	Count   int      `json:"count"`
-// }
+type AuthorsResponse struct {
+	Authors []Author `json:"authors"`
+	Count   int      `json:"count"`
+}
